--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.5.1",
+    "dotenv": "^8.1.0",
     "google-spreadsheet": "^2.0.8",
     "googleapis": "^39.2.0"
   }
